// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressIndicator Component matches snapshot with all custom props 1`] = `
<div
  data-testid="progress-indicator"
>
  <div
    data-testid="spinner"
    style="width: 32px; height: 32px;"
  >
    Loading...
  </div>
  <div
    data-testid="message"
  >
    Loading data...
  </div>
</div>
`;

exports[`ProgressIndicator Component matches snapshot with custom color 1`] = `
<div
  data-testid="progress-indicator"
>
  <div
    data-testid="spinner"
  >
    Loading...
  </div>
</div>
`;

exports[`ProgressIndicator Component matches snapshot with custom message 1`] = `
<div
  data-testid="progress-indicator"
>
  <div
    data-testid="spinner"
  >
    Loading...
  </div>
  <div
    data-testid="message"
  >
    Processing your request...
  </div>
</div>
`;

exports[`ProgressIndicator Component matches snapshot with custom size 1`] = `
<div
  data-testid="progress-indicator"
>
  <div
    data-testid="spinner"
    style="width: 48px; height: 48px;"
  >
    Loading...
  </div>
</div>
`;

exports[`ProgressIndicator Component renders progress indicator component 1`] = `
<div
  data-testid="progress-indicator"
>
  <div
    data-testid="spinner"
  >
    Loading...
  </div>
</div>
`;
